--- a/.env
+++ b/.env
@@ -3,5 +3,5 @@ OPENROUTER_API_KEY=sk-or-v1-42d2fc2b8135a790b9f5487d7dfe34d2d375eb946f060e4f969b
 OPENROUTER_MODEL=mistralai/mistral-7b-instruct
 OPENROUTER_EMBEDDING_MODEL=text-embedding-3-small
 
-#APP_URL=https://api.render.com/deploy/srv-d2egnoc9c44c738vk6m0?key=i8feEDORTss
-APP_URL=http://localhost:5000
+APP_URL=https://api.render.com/deploy/srv-d2egnoc9c44c738vk6m0?key=i8feEDORTss
+#APP_URL=http://localhost:5000
